Changes since Roxen Challenger 1.2 alpha 11
-----------------------------------------------

o Threads now work better.

o The start-script now sets the umask to 022, to be certain it can read
  the files Roxen creates.

o Some fixes to the neigbourhood system.

o The mutex-code in pike/src/treads.c rewritten, optimized and bugfixed.
  The need for mutex_kluge has been removed.
  Locking an unlocked mutex now doesn't involve any thread-operations at all.
  Several race-conditions removed.

o The compiler-option -sopt for IRIX-cc has been disabled since it caused the
  compiler to hang on interpret.c

o Improved tests for the Gz-module.

o Several fixes to support stupid C preprocessors.

o Fixes to the UDP code.

o The supplied version of gmp now compiles on Solaris 2.6 x86.

o ((program)"privs") assigned to a constant (Privs) to improve efficiency.

o Now opens all ports at the beginning of the boot-sequence to keep
  "Connection refused" time to a minimum.

o The log-file filename can now contain the current date and time.

o Removed some race-conditions.

o Now possible to select server to upgrade from.


Changes since Roxen Challenger 1.2 alpha 10
-----------------------------------------------

o Threads are enabled by default, and actually work.

o The HTTP protocol now does it's very best to log the ACTUAL number
  of sent bytes, even for CGI scripts. It will not work for
  modules (or pike-scripts) that use the http_pipe_in_progress()
  function, though, but to my knowledge there are no such modules in
  the Roxen distribution, with the exception of the Proxy module,
  which will not be logged in the normal log anyway.

  I had to remove support for the external shuffle program for this to
  work. This program was not very helpful anyway, unless you run
  Solaris 2.4 it only slows things down, if you do not have a multi
  CPU machine, in which case the internal thread support in Roxen is
  better anyway.
